--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.3.0",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "react-markdown": "8.0.2",
     "sass-embedded": "^1.50.0"
   },
